fix(popup): url overflow when scrolling

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -205,6 +205,11 @@ input[type="image"]:active {
   padding: var(--MARGIN);
 }
 
+#infoScroll a {
+  overflow-wrap: break-word;
+  word-break: break-all;
+}
+
 #infoTags li + li,
 p + p {
   margin-top: var(--MARGIN);
